start re-organize the project + more CLAUDE.md instructions