@@ -1,11 +1,8 @@
-package com.example.bench;
+package com.example.benchmark;
 
+import com.example.ffm.RocksDB;
+import com.example.ffm.WriteBatch;
 import org.openjdk.jmh.annotations.*;
-import org.rocksdb.Options;
-import org.rocksdb.ReadOptions;
-import org.rocksdb.RocksDB;
-import org.rocksdb.WriteBatch;
-import org.rocksdb.WriteOptions;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
@@ -19,12 +16,8 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Benchmark)
 @Warmup(iterations = 3, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(1)
-public class JniBenchmark {
-
-    static {
-        RocksDB.loadLibrary();
-    }
+@Fork(value = 1, jvmArgsPrepend = "--enable-native-access=ALL-UNNAMED")
+public class FfmBenchmark {
 
     private static final int NUM_KEYS = 10_000;
     private static final int BATCH_SIZE = 100;
@@ -33,9 +26,6 @@ public class JniBenchmark {
     private static final byte[] BATCH_VALUE = "batch-value-data-0123456789".getBytes();
 
     private RocksDB db;
-    private Options options;
-    private WriteOptions writeOptions;
-    private ReadOptions readOptions;
     private Path dbPath;
 
     private ByteBuffer writeKeyBuf;
@@ -52,11 +42,8 @@ public class JniBenchmark {
 
     @Setup(Level.Trial)
     public void setup() throws Exception {
-        dbPath = Files.createTempDirectory("bench-jni-");
-        options = new Options().setCreateIfMissing(true);
-        db = RocksDB.open(options, dbPath.toString());
-        writeOptions = new WriteOptions();
-        readOptions = new ReadOptions();
+        dbPath = Files.createTempDirectory("bench-ffm-");
+        db = RocksDB.open(dbPath.toString());
 
         writeKeyBuf = ByteBuffer.allocateDirect(WRITE_KEY.length);
         writeKeyBuf.put(WRITE_KEY).flip();
@@ -77,46 +64,51 @@ public class JniBenchmark {
         for (int i = 0; i < BATCH_SIZE; i++) {
             batchKeys[i] = ("batch-key-" + i).getBytes();
         }
-        batch = new WriteBatch();
+        batch = WriteBatch.create();
     }
 
     @TearDown(Level.Trial)
-    public void teardown() throws Exception {
+    public void teardown() throws IOException {
         batch.close();
         db.close();
-        options.close();
-        writeOptions.close();
-        readOptions.close();
         deleteDir(dbPath);
     }
 
     @Benchmark
-    public void writes() throws Exception {
+    public void writes() {
         writeKeyBuf.rewind();
         writeValBuf.rewind();
-        db.put(writeOptions, writeKeyBuf, writeValBuf);
+        db.put(writeKeyBuf, writeValBuf);
     }
 
     @Benchmark
-    public int reads(Counter counter) throws Exception {
+    public int reads(Counter counter) {
         ByteBuffer key = readKeyBufs[counter.index++ % NUM_KEYS];
         key.rewind();
         readValBuf.clear();
-        return db.get(readOptions, key, readValBuf);
+        return db.get(key, readValBuf);
     }
 
     @Benchmark
-    public void batchWrites() throws Exception {
+    public void batchWrites() {
         batch.clear();
         for (int i = 0; i < BATCH_SIZE; i++) {
             batch.put(batchKeys[i], BATCH_VALUE);
         }
-        db.write(writeOptions, batch);
+        db.write(batch);
     }
 
     private static void deleteDir(Path dir) throws IOException {
         Files.walk(dir)
              .sorted(Comparator.reverseOrder())
              .forEach(p -> p.toFile().delete());
+    }
+
+     static void main() throws Exception {
+        org.openjdk.jmh.runner.options.Options opt = new org.openjdk.jmh.runner.options.OptionsBuilder()
+                .include(FfmBenchmark.class.getSimpleName())
+                .build();
+
+        new org.openjdk.jmh.runner.Runner(opt).run();
     }
 }
